fix layout issues in collection

--- a/style.css
+++ b/style.css
@@ -250,6 +250,12 @@ textarea {
     border: 1px solid rgb(191, 191, 191);
 }
 
+.img img {
+    width:  100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .item-cart {
     padding: 2%;
     display: flex;
